<resources>
    <string name="app_name">Taxi5</string>
    <string name="taxi5">Taxi5</string>
    <string name="logo_taxi5">Logo Taxi5</string>
    <string name="activity_register_label">Registrarse</string>
    <string name="activity_register_registrarse">Registrarse</string>
    <string name="activity_register_form">Formulario de registro</string>
    <string name="activity_login_label">Iniciar Sesión</string>
    <string name="activity_login_iniciar_sesion">Iniciar Sesión</string>
    <string name="activity_login_iniciar_sesion_google">Iniciar Sesión con Google</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_lastname">Apellidos</string>
    <string name="prompt_phone">Teléfono</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_samePassword">Repita la contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="error_invalid_email">Este correo es invalido</string>
    <string name="error_invalid_password">Esta contraseña es demasiado corta</string>
    <string name="error_incorrect_password">Esta contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Los permisos de los contactos son necesarios para autocompletar el correo electrónico."</string>
    <string name="activity_home_label">Taxi5</string>
    <string name="activity_home_search">Buscar</string>
    <string name="activity_home_profile">Perfil</string>
    <string name="activity_home_historical">Histórico</string>
    <string name="activity_home_logout">Desconectarse</string>
    <string name="no_current_location">Error: Imposible obtener su ubicación actual</string>
    <string name="activity_profile_label">Mi perfil</string>
    <string name="activity_profile_edit_profile">Editar perfil</string>
    <string name="activity_profile_default_name_surname">NOMBRE APELLIDOS</string>
    <string name="activity_profile_change_password">Cambiar contraseña</string>
    <string name="activity_profile_user_profile">Perfil del usuario</string>
    <string name="activity_edit_profile_label">Editar perfil</string>
    <string name="activity_edit_profile_phone">Teléfono</string>
    <string name="activity_edit_profile_confirm_changes">Confirmar cambios</string>
    <string name="activity_edit_profile_profile_updated">Perfil actualizado!</string>
    <string name="activity_change_password_label">Cambiar contraseña</string>
    <string name="activity_change_password_current_password">Contraseña actual</string>
    <string name="activity_change_password_new_password">Nueva contraseña</string>
    <string name="activity_change_password_confirm_new_password">Confirmar nueva contraseña</string>
    <string name="activity_change_password_update">Actualizar contraseña</string>
    <string name="activity_change_password_password_updated">Contraseña actualizada!</string>
    <string name="activity_change_password_password_error">Error! La contraseña actual no es correcta.</string>
    <string name="activity_historical_label">Histórico</string>
    <string name="activity_historical_date_travel">fecha del viaje</string>
    <string name="activity_historical_origin">Origen</string>
    <string name="activity_historical_destination">Destino</string>
    <string name="activity_historical_origin_location">localizacion de origen</string>
    <string name="activity_historical_destination_location">localizacion de destino</string>
    <string name="activity_search_label">Buscar</string>
    <string name="activity_search_origin">Origen</string>
    <string name="activity_search_destination">Destino</string>
    <string name="activity_search_request_taxi">Solicitar taxi</string>
    <string name="activity_trayecto_label">Trayecto</string>
    <string name="activity_trayecto_confirm_travel">Confirmar viaje</string>
    <string name="activity_trayecto_cancel">Cancelar</string>
    <string name="activity_pago_label">Pago</string>
    <string name="activity_pago_pago_a_realizar">Realizar pago</string>
    <string name="activity_pago_pay">Pagar y Finalizar</string>
    <string name="activity_pago_paid">Pago realizado, ¡Gracias por viajar con Taxi5! : )</string>
    <string name="activity_pago_price">Precio</string>
    <string name="activity_pago_origen">Origen: </string>
    <string name="activity_pago_destination">Destino: </string>
    <string name="payment">Confirmación del pago</string>
    <string name="payment_dialog">¿Desea finalizar el viaje?</string>
    <string name="agradecimiento">¡Gracias por viajar con Taxi5! : )</string>
    <string name="yes">Si</string>
    <string name="undo_string">Ir a inicio</string>
    <string name="no">No</string>
    <string name="enter_origin_address">Introduce dirección de origen</string>
    <string name="enter_destination_address">Introduce dirección de destino</string>
    <string name="cancelar_viaje">¿Estás seguro de que desea cancelar el viaje?</string>
    <string name="viaje_cancelado">Viaje cancelado</string>
    <string name="cancelar_viaje_menu">Cancelar viaje</string>
    <string name="calculando_ruta">Calculando ruta</string>
    <string name="ir_pagar">Detalles pago</string>
    <string name="llegada_dest">LLegada a destino confirmada</string>
    <string name="button_confirmar_llegada">LLegada a destino</string>
    <string name="ruta_activity">Ruta</string>
    <string name="taxista_en_camino">Taxista en camino</string>
    <string name="viaje_en_proceso">¡Disfrute del viaje!</string>
    <string name="buscando_taxista">Buscando taxista...</string>
    <string name="esperando_taxista">Esperando al taxista...</string>
    <string name="buscando_taxista_mensaje">El taxista está en camino.</string>
    <string name="confirmar_llegada_taxista">Confirmar llegada del taxista</string>
    <string name="getting_current_location">Obteniendo ubicación actual ...</string>
    <string name="confirm_driver_arrival">Confirmar llegada del taxista</string>
    <string name="ruta_problema">¿Hubo un problema?</string>
    <string name="comunicar_problema_ruta">Comunicando problema...</string>
    <string name="cancelar_viaje_iniciado">¿Hubo algún problema y desea cancelar el viaje en curso?</string>
    <string name="eula_dialog_title">EUALA agreegment</string>
</resources>