<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp"
    android:layout_gravity="center"
    app:contentPadding="5dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp">

        <TextView
            android:id="@+id/route_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="8dp"
            android:text="@string/activity_historical_date_travel"
            app:layout_constraintStart_toStartOf="@+id/origin_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/origin_label"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/activity_historical_origin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/route_date" />

        <TextView
            android:id="@+id/destination_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/destination_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/activity_historical_destination_location"
            app:layout_constraintBottom_toBottomOf="@+id/destination_label"
            app:layout_constraintStart_toEndOf="@+id/destination_label"
            app:layout_constraintTop_toTopOf="@+id/destination_label" />

        <TextView
            android:id="@+id/destination_label"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/origin_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/activity_historical_destination"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/origin_label"
            app:layout_constraintTop_toBottomOf="@+id/origin_label" />

        <TextView
            android:id="@+id/origin_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="2dp"
            android:text="@string/activity_historical_origin"
            app:layout_constraintBottom_toBottomOf="@+id/origin_label"
            app:layout_constraintStart_toEndOf="@+id/origin_label"
            app:layout_constraintTop_toTopOf="@+id/origin_label"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>