<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".ui.PaymentActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <TextView
        android:id="@+id/tvNameHistoric"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:text="@string/activity_pago_pago_a_realizar"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="@+id/ivUser"
        app:layout_constraintStart_toStartOf="@+id/ivUser"
        app:layout_constraintTop_toBottomOf="@+id/ivUser" />

    <ImageView
        android:id="@+id/ivUser"
        android:layout_width="142dp"
        android:layout_height="106dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/activity_profile_user_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintVertical_bias="0.079"
        app:srcCompat="@mipmap/ic_launcher_foreground" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/ivUser"
        app:layout_constraintStart_toStartOf="@+id/ivUser"
        app:layout_constraintTop_toBottomOf="@+id/tvNameHistoric">

        <TextView
            android:id="@+id/tvLabelOrigin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40sp"
            android:paddingRight="40sp"
            android:text="@string/activity_pago_origen"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/pago_origen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40sp"
            android:paddingTop="5sp"
            android:paddingRight="40sp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/pago_destino" />

        <TextView
            android:id="@+id/tvLabelDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40sp"
            android:paddingTop="10sp"
            android:paddingRight="40sp"
            android:text="@string/activity_pago_destination"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pago_destino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40sp"
            android:paddingTop="5sp"
            android:paddingRight="40sp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/pago_precio" />

        <TextView
            android:id="@+id/pago_precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:paddingTop="22dp"
            android:textSize="58sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameHistoric" />

    </LinearLayout>

    <Button
        android:id="@+id/btnMakePayment"
        style="?android:textAppearanceSmall"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_rounded"
        android:onClick="onClickBtnPay"
        android:text="@string/activity_pago_pay"
        android:textColor="@android:color/white"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>